--- a/style.css
+++ b/style.css
@@ -140,12 +140,21 @@ a {
   text-decoration: none;
 }
 @media only screen and (max-width: 600px) {
+     body{
+    width: 100%;
+  }
     .navbar {
       font-size: 18px;
       padding-top: 10px;
+      
     }
   
     #breed-image img {
       margin-left: 100px;
+    }
+    #flex {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
     }
   }
